Expand test coverage. Add generation 3 damage taken per death calculation. Add more javadocs