@@ -141,7 +141,6 @@
                 <configuration>
                     <forkCount>0</forkCount>
                     <reuseForks>true</reuseForks>
-                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <includes>
                         <include>**/*IT.java</include>
                     </includes>
